# ig-trading-bot

./: .env.example  .gitignore  BACKTEST_RESULTS_PROFESSIONAL_STRATEGY.md  BEST_CANDIDATE_STRATEGIES.md  COST_SENSITIVITY_ANALYSIS.md  DATA_QUALITY_AUDIT.csv  DATA_QUALITY_AUDIT.md  Dockerfile  Dockerfile.render  FINAL_BLOCKED_STATUS.md  FINAL_RESEARCH_RECOMMENDATION.md  HIGHER_TIMEFRAME_RESEARCH_SUMMARY.md  MARKET_REGIME_RESULTS.csv  MARKET_TIMEFRAME_RESULTS.csv  MISSING_DATA_REQUIREMENTS.md  PROFESSIONAL_STRATEGY_EXPERIMENT_MATRIX.csv  PROFESSIONAL_STRATEGY_FAILURE_ANALYSIS.md  PROFESSIONAL_STRATEGY_RESEARCH_RECOMMENDATION.md  README.md  RESEARCH_STATUS_UPDATE.txt  SAFETY_FIX_STATUS.md  STRATEGY_DISCOVERY_SUMMARY.md  STRATEGY_FAMILY_RESULTS.csv  STRATEGY_FAMILY_WALK_FORWARD_RESULTS.csv  TRADING_BOT_STRATEGY_DETAILS.txt  UPDATED_STRATEGY_STATUS.txt  XAUUSD_4H_COST_STRESS_TEST.csv  XAUUSD_4H_ROBUSTNESS_REPORT.md  XAUUSD_4H_WINDOW_STABILITY.csv  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
config/: research.example.json
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  styles.css
deploy/: redis.conf  supervisord.conf
docs/: FREE_NEWS_SAFETY.md  HISTORICAL_DATA.md  PROFESSIONAL_STRATEGY_AUDIT.md
scripts/: aggregate_binance_15m.sh  audit_historical_data.py  backtest_professional_strategy.py  download_oanda_history.py  download_twelve_data_history.py  export_forexfactory_calendar.py  research_pipeline.py  run_backtest.py  run_market_timeframe_research.py  run_professional_diagnostics.py  run_strategy_discovery.py  run_xauusd_4h_robustness.py  train_hist_data.py  verify_professional_backtests.py
src/: main.py
src/api/: middleware.py  websocket.py
src/backtesting/: __init__.py  backtest_engine.py  metrics.py  monte_carlo.py  walk_forward.py
src/config/: __init__.py  constants.py  (+2 more)
tests/: __init__.py  conftest.py
(+219 files in other folders)
