[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "institutional-ai-trading-system"
version = "0.1.0"
description = "Institutional-grade autonomous AI trading system integrated with IG trading platform"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "uvloop==0.21.0",
    "orjson==3.10.12",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "redis[hiredis]==5.2.1",
    "httpx==0.28.1",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "transformers==4.47.1",
    "torch==2.5.1",
    "xgboost==2.1.3",
    "scikit-learn==1.6.0",
    "python-telegram-bot==21.9",
    "discord.py==2.4.0",
    "aiosmtplib==3.0.2",
    "websockets==14.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "hypothesis==6.119.3",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "httpx[http2]==0.28.1",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "aiosqlite==0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "COM", "C4", "PT"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
